fixing navbar so collapsing works

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ h1 {
 
 ul {
     list-style-type: none;
-    text-align: left:
+    text-align: left;
 }
 
 li {
